--- a/hm-gateway/src/main/resources/application.properties
+++ b/hm-gateway/src/main/resources/application.properties
@@ -8,20 +8,24 @@ logging.level.org.springframework.cloud.gateway=TRACE
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-spring.cloud.gateway.routes[0].id=handmall-main
-spring.cloud.gateway.routes[0].uri=lb://handmall-main
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/main/*
+# spring.cloud.gateway.routes[0].id=handmall-main
+# spring.cloud.gateway.routes[0].uri=lb://handmall-main
+# spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/main/*
 
-spring.cloud.gateway.routes[1].id=hm-discovery
+spring.cloud.gateway.routes[0].id=hm-discovery
+spring.cloud.gateway.routes[0].uri=http://localhost:8767
+spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[0].filters[0]=SetPath=/
+
+spring.cloud.gateway.routes[1].id=hm-discovery-static
 spring.cloud.gateway.routes[1].uri=http://localhost:8767
-spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[1].filters[0]=SetPath=/
+spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka/**
 
-spring.cloud.gateway.routes[2].id=hm-discovery-static
-spring.cloud.gateway.routes[2].uri=http://localhost:8767
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[2].id=hm-security
+spring.cloud.gateway.routes[2].uri=lb://hm-security
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/auth/**
 
-spring.cloud.gateway.routes[3].id=hm-security
-spring.cloud.gateway.routes[3].uri=lb://hm-security
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/auth/**
+spring.cloud.gateway.routes[3].id=hm-department
+spring.cloud.gateway.routes[3].uri=lb://hm-department
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/department/*
 
