--- a/hm-department/src/main/resources/application.properties
+++ b/hm-department/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 eureka.client.service-url.defaultZone=http://localhost:8767/eureka
 spring.application.name=hm-department
+server.port=0
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_HOST:localhost:5455}/hm-department
 spring.datasource.username=admin
 spring.datasource.password=admin123
