--- a/hm-gateway/src/main/resources/application.properties
+++ b/hm-gateway/src/main/resources/application.properties
@@ -8,6 +8,9 @@ logging.level.org.springframework.cloud.gateway=TRACE
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+
 # spring.cloud.gateway.routes[0].id=handmall-main
 # spring.cloud.gateway.routes[0].uri=lb://handmall-main
 # spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/main/*
@@ -28,4 +31,8 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/auth/**
 spring.cloud.gateway.routes[3].id=hm-department
 spring.cloud.gateway.routes[3].uri=lb://hm-department
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/department/*
+
+spring.cloud.gateway.routes[4].id=hm-department-category
+spring.cloud.gateway.routes[4].uri=lb://hm-department
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/category/*
 
