--- a/hm-security/src/main/resources/application.properties
+++ b/hm-security/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8731
 eureka.client.service-url.defaultZone=http://localhost:8767/eureka
 spring.application.name=hm-security
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+
 spring.datasource.url=jdbc:postgresql://${DATASOURCE_HOST:localhost:5454}/hm-security
 spring.datasource.username=admin
 spring.datasource.password=admin567
