--- a/hm-department/build.gradle
+++ b/hm-department/build.gradle
@@ -31,9 +31,12 @@ dependencies {
 	implementation 'io.micrometer:micrometer-observation:1.10.6'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.0.4'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:2.16.3'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
