--- a/hm-gateway/src/main/resources/application.properties
+++ b/hm-gateway/src/main/resources/application.properties
@@ -5,6 +5,8 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
