add product and vendor microservices

--- a/hm-gateway/src/main/resources/application.properties
+++ b/hm-gateway/src/main/resources/application.properties
@@ -33,8 +33,10 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/auth/**
 spring.cloud.gateway.routes[3].id=hm-department
 spring.cloud.gateway.routes[3].uri=lb://hm-department
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/department/**
+spring.cloud.gateway.routes[3].filters[0]=AuthenticationFilter
 
 spring.cloud.gateway.routes[4].id=hm-department-category
 spring.cloud.gateway.routes[4].uri=lb://hm-department
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/category/**
+spring.cloud.gateway.routes[4].filters[0]=AuthenticationFilter
 
