--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include 'hm-discovery'
 include 'hm-gateway'
 include 'hm-security'
 include 'hm-department'
+include 'hm-vendor'
+include 'hm-product'
