--- a/hm-product/build.gradle
+++ b/hm-product/build.gradle
@@ -15,27 +15,21 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
 
 ext {
-	set('springCloudVersion', "2022.0.2")
+	set('springCloudVersion', "2022.0.3")
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.5'
-	implementation 'io.micrometer:micrometer-observation:1.10.6'
-	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.0.4'
-	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:2.16.3'
-	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
