add dependencies and configurations

--- a/hm-gateway/src/main/resources/application.properties
+++ b/hm-gateway/src/main/resources/application.properties
@@ -13,10 +13,6 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
 
-# spring.cloud.gateway.routes[0].id=handmall-main
-# spring.cloud.gateway.routes[0].uri=lb://handmall-main
-# spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/main/*
-
 spring.cloud.gateway.routes[0].id=hm-discovery
 spring.cloud.gateway.routes[0].uri=http://localhost:8767
 spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/web
@@ -40,3 +36,12 @@ spring.cloud.gateway.routes[4].uri=lb://hm-department
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/category/**
 spring.cloud.gateway.routes[4].filters[0]=AuthenticationFilter
 
+spring.cloud.gateway.routes[5].id=hm-vendor
+spring.cloud.gateway.routes[5].uri=lb://hm-vendor
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v1/vendor/**
+spring.cloud.gateway.routes[5].filters[0]=AuthenticationFilter
+
+spring.cloud.gateway.routes[6].id=hm-product
+spring.cloud.gateway.routes[6].uri=lb://hm-product
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/v1/product/**
+spring.cloud.gateway.routes[6].filters[0]=AuthenticationFilter
