--- a/hm-department/build.gradle
+++ b/hm-department/build.gradle
@@ -19,14 +19,14 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2022.0.2")
+	set('springCloudVersion', "2022.0.3")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.5'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-observation:1.10.6'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.0.4'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:2.16.3'
