--- a/hm-product/src/main/resources/application.properties
+++ b/hm-product/src/main/resources/application.properties
@@ -5,11 +5,8 @@ server.port=0
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
 
-spring.datasource.url=jdbc:postgresql://${DATASOURCE_HOST:localhost:5457}/hm-product
-spring.datasource.username=admin
-spring.datasource.password=admin123
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=5457
+spring.data.mongodb.database=hm-product
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin123
