--- a/hm-product/src/main/resources/application.properties
+++ b/hm-product/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.data.mongodb.port=5457
 spring.data.mongodb.database=hm-product
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin123
+spring.data.mongodb.authentication-database=admin
