--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,7 +73,7 @@ services:
   hm-rabbitmq:
     image: rabbitmq:3.12.1-management-alpine
     container_name: hm-rabbitmq
-    restart: on-failure
+    restart: always
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: password
