--- a/hm-discovery/src/main/resources/application.properties
+++ b/hm-discovery/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8767
 
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
+
+springdoc.swagger-ui.config-url=/swagger-config.json
