--- a/hm-security/build.gradle
+++ b/hm-security/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.5'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'io.micrometer:micrometer-observation:1.10.6'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.0.4'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:2.16.3'
