--- a/hm-discovery/src/main/resources/application.properties
+++ b/hm-discovery/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 eureka.instance.hostname=localhost
+eureka.instance.preferIpAddress=false
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8767
